# gosh.cli

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  clippy.toml  install.ps1  install.sh  rustfmt.toml  services.toml.example  taplo.toml
.github/workflows/: ci.yml  release.yml
docs/: cli.md  quickstart.md  quickstart_docker.md  quickstart_prompt.md
specs/: agent_create_optional_binary.md  agent_create_optional_host_port.md  agent_setup_scope.md  binary_delivery.md  bootstrap_import.md  cli_instance_flag_scope.md  followup.md  memory_admin_export_import.md  memory_public_url.md  memory_setup_instance_flag.md  v0.2.0.md  windows_support.md
src/: context.rs  main.rs  meta.rs  output.rs
src/clients/: mcp.rs  mod.rs
src/commands/: bundle.rs  doctor.rs  init.rs  logs.rs  mod.rs  setup.rs  start.rs  status.rs  stop.rs
src/commands/agent/: create.rs  import.rs  logs.rs  mod.rs  restart.rs  setup.rs  start.rs  status.rs  stop.rs  uninstall.rs
src/commands/agent/bootstrap/: export.rs  mod.rs  rotate.rs  show.rs
src/commands/agent/courier/: mod.rs  subscribe.rs  unsubscribe.rs
src/commands/agent/instance/: list.rs  mod.rs  use_cmd.rs
src/commands/agent/oauth/: client.rs  (+1 more)
src/commands/memory/: ask.rs  config.rs  flush.rs  get.rs  import.rs  index.rs  init.rs  list.rs  logs.rs  mod.rs  prompt.rs  recall.rs  reextract.rs  secret.rs  start.rs  stats.rs  status.rs  stop.rs  store.rs
src/commands/secret/: mod.rs
src/config/: agent.rs  instance.rs  memory.rs  mod.rs
src/keychain/: agent.rs  memory.rs  mod.rs
src/process/: launcher.rs  mod.rs  state.rs
src/release/: manifest.rs  mod.rs  platform.rs  update_check.rs
src/services/: config.rs  launcher.rs  mod.rs  registry.rs
src/stores/: mod.rs  secret.rs
src/utils/: docker.rs  join_token.rs  mod.rs  net.rs  output.rs
tests/: cli_integration.rs
(+64 files in other folders)
