
[package]
name = "gosh-cli"
version = "0.1.0"
edition = "2024"
description = "CLI orchestrator for gosh.memory and gosh-agent"
license = "MIT"

[[bin]]
name = "gosh"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0.7+spec-1.1.0"
colored = "3.1.1"
reqwest = { version = "0.13.2", features = ["json"] }
nix = { version = "0.31.2", features = ["signal", "process", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
anyhow = "1"
which = "8.0.2"
atty = "0.2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
