
[package]
name = "gosh-cli"
version = "0.5.2"
edition = "2024"
description = "CLI orchestrator for gosh.memory and gosh-agent"
license = "MIT"

[[bin]]
name = "gosh"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
colored = "3"
dirs = "6"
hex = "0.4"
keyring = { version = "3", features = ["apple-native", "linux-native"] }
nix = { version = "0.31", features = ["signal", "process", "fs"] }
rand = "0.10.0"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.11"
tempfile = "3"
url = "2"
which = "8"
x25519-dalek = { version = "2", features = ["static_secrets"] }

[dev-dependencies]
